--- a/templates/EditForm.html.twig
+++ b/templates/EditForm.html.twig
@@ -12,16 +12,8 @@
                         <input type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Address</label>
+                        <label>Description</label>
                         <textarea class="form-control" required></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label>Phone</label>
-                        <input type="text" class="form-control" required>
                     </div>
                 </div>
                 <div class="modal-footer">
