--- a/templates/body.html.twig
+++ b/templates/body.html.twig
@@ -34,9 +34,10 @@
                         <td>{{ org.description }}</td>
                         <td>{{ org.users|length }}</td>
                         <td>
-                            <a href="#editOrganisationModal" data-target="#edit-modal" class="edit" data-toggle="modal"><i class="material-icons"
-                                                                                                 data-toggle="tooltip"
-                                                                                                 title="Edit">&#xE254;</i></a>
+                            <a href="#editOrganisationModal" data-target="#edit-modal" class="edit" data-toggle="modal"><i
+                                        class="material-icons"
+                                        data-toggle="tooltip"
+                                        title="Edit">&#xE254;</i></a>
                             <a href={{ path('app_organisations_remove',{name:org.name}) }} class="delete"
                                data-toggle="modal"><i
                                         class="material-icons"
