--- a/templates/body.html.twig
+++ b/templates/body.html.twig
@@ -34,7 +34,7 @@
                         <td>{{ org.description }}</td>
                         <td>{{ org.users|length }}</td>
                         <td>
-                            <a href="#editOrganisationModal" data-target="#edit-modal" class="edit" data-toggle="modal"><i
+                            <a href="#editOrganisationModal"  class="edit" data-toggle="modal"><i
                                         class="material-icons"
                                         data-toggle="tooltip"
                                         title="Edit">&#xE254;</i></a>
